--- a/Assets/Heart/Modules/Localization/Editor/Pancake.Localization.Editor.asmdef
+++ b/Assets/Heart/Modules/Localization/Editor/Pancake.Localization.Editor.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "GUID:c7e7793e0b5d326429f90e6fd716775e",
         "GUID:adac8d59ad7e8504f82d387cded797a7",
-        "GUID:d54e067e22b30d84d974d345601e49b6"
+        "GUID:d54e067e22b30d84d974d345601e49b6",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [
         "Editor"
