--- a/Assets/Heart/Modules/Localization/Editor/Pancake.Localization.Editor.asmdef
+++ b/Assets/Heart/Modules/Localization/Editor/Pancake.Localization.Editor.asmdef
@@ -2,9 +2,11 @@
     "name": "Pancake.Localization.Editor",
     "rootNamespace": "",
     "references": [
+        "GUID:341d04dbc3e6ced4f903de04a0918a48",
         "GUID:c7e7793e0b5d326429f90e6fd716775e",
         "GUID:adac8d59ad7e8504f82d387cded797a7",
         "GUID:d54e067e22b30d84d974d345601e49b6",
+        "GUID:87eaf3fd1840b5c42a5f00c0a45ccaa1",
         "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [
