--- a/Assets/Heart/package.json
+++ b/Assets/Heart/package.json
@@ -2,7 +2,7 @@
   "name": "com.pancake.heart",
   "displayName": "Heart",
   "description": "The heart of the world tree, use for make game in Unity3D",
-  "version": "2.2.2",
+  "version": "2.2.3",
   "unity": "2022.2",
   "category": "core",
   "author": {
@@ -19,8 +19,7 @@
     "com.unity.nuget.newtonsoft-json": "3.2.1",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.burst": "1.8.11",
-    "com.unity.collections": "2.1.4",
-    "com.unity.textmeshpro": "3.0.6"
+    "com.unity.collections": "2.1.4"
   },
   "repository": {
     "type": "git",
