--- a/Assets/Heart/Modules/Input/Pancake.Input.asmdef
+++ b/Assets/Heart/Modules/Input/Pancake.Input.asmdef
@@ -2,7 +2,9 @@
     "name": "Pancake.Input",
     "rootNamespace": "Pancake.MobileInput",
     "references": [
-        "GUID:adac8d59ad7e8504f82d387cded797a7"
+        "GUID:341d04dbc3e6ced4f903de04a0918a48",
+        "GUID:adac8d59ad7e8504f82d387cded797a7",
+        "GUID:b0a110e2f808b4d4d82f5694f91b251a"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
