--- a/Assets/Heart/Modules/Input/Editor/Pancake.Input.Editor.asmdef
+++ b/Assets/Heart/Modules/Input/Editor/Pancake.Input.Editor.asmdef
@@ -5,7 +5,8 @@
         "GUID:10795a3c3b0d433409433db01ea7fa3e",
         "GUID:5a5bdc0387f898e429d96457c503426a",
         "GUID:87eaf3fd1840b5c42a5f00c0a45ccaa1",
-        "GUID:341d04dbc3e6ced4f903de04a0918a48"
+        "GUID:341d04dbc3e6ced4f903de04a0918a48",
+        "GUID:adac8d59ad7e8504f82d387cded797a7"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
