--- a/Assets/Heart/package.json
+++ b/Assets/Heart/package.json
@@ -19,7 +19,8 @@
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.burst": "1.8.11",
     "com.unity.collections": "2.1.4",
-    "com.unity.serialization": "3.1.1"
+    "com.unity.serialization": "3.1.1",
+    "com.unity.nuget.newtonsoft-json": "3.2.1"
   },
   "repository": {
     "type": "git",
