--- a/Assets/Heart/Modules/Apex/ExLib/Core/Editor/Pancake.ExLibEditor.asmdef
+++ b/Assets/Heart/Modules/Apex/ExLib/Core/Editor/Pancake.ExLibEditor.asmdef
@@ -1,18 +1,21 @@
 {
-  "name": "Pancake.ExLibEditor",
-  "rootNamespace": "",
-  "references": [
-    "GUID:d54e067e22b30d84d974d345601e49b6"
-  ],
-  "includePlatforms": [
-    "Editor"
-  ],
-  "excludePlatforms": [],
-  "allowUnsafeCode": false,
-  "overrideReferences": false,
-  "precompiledReferences": [],
-  "autoReferenced": true,
-  "defineConstraints": [],
-  "versionDefines": [],
-  "noEngineReferences": false
+    "name": "Pancake.ExLibEditor",
+    "rootNamespace": "",
+    "references": [
+        "GUID:d54e067e22b30d84d974d345601e49b6"
+    ],
+    "includePlatforms": [
+        "Editor"
+    ],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": true,
+    "precompiledReferences": [
+        "Newtonsoft.Json.dll",
+        "Unity.SharpZipLib.dll"
+    ],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
