--- a/Assets/Heart/Modules/PrimeTween/Runtime/PrimeTween.Runtime.asmdef
+++ b/Assets/Heart/Modules/PrimeTween/Runtime/PrimeTween.Runtime.asmdef
@@ -2,11 +2,11 @@
     "name": "PrimeTween.Runtime",
     "rootNamespace": "",
     "references": [
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "Unity.TextMeshPro"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
-    "allowUnsafeCode": false,
+    "allowUnsafeCode": true,
     "overrideReferences": false,
     "precompiledReferences": [],
     "autoReferenced": true,
