--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -52,7 +52,6 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0",
-    "com.needle.selective-profiling": "https://github.com/pancake-llc/selective-profiling.git?path=package#1.0.1-pre.1"
+    "com.unity.modules.xr": "1.0.0"
   }
 }
