-refactor wizard drawer icon installed

--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -52,6 +52,13 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0"
+    "com.unity.modules.xr": "1.0.0",
+    "com.unity.ads.ios-support": "1.2.0",
+    "com.needle.console": "https://github.com/pancake-llc/needle-console.git?path=package#2.4.1",
+    "com.pancake.demystifier": "https://github.com/pancake-llc/ben-demystifier.git#0.4.1",
+    "com.pancake.unsafe": "https://github.com/pancake-llc/system-unsafe.git#5.0.0",
+    "com.pancake.immutable": "https://github.com/pancake-llc/system-immutable.git#5.0.0",
+    "com.pancake.reflection.metadata": "https://github.com/pancake-llc/reflection-metadata.git#5.0.0",
+    "com.needle.selective-profiling": "https://github.com/pancake-llc/selective-profiling.git?path=package#1.0.1-pre.1"
   }
 }
