--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,7 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+
+# Temporary auto-generated BuildReports by ProjectAuditor
+/[Aa]ssets/[Bb]uildReports/
+/[Aa]ssets/[Bb]uildReports.meta
