--- a/Assets/Heart/Modules/IAP/Editor/Pancake.Purchase.Editor.asmdef
+++ b/Assets/Heart/Modules/IAP/Editor/Pancake.Purchase.Editor.asmdef
@@ -2,9 +2,12 @@
     "name": "Pancake.Purchase.Editor",
     "rootNamespace": "",
     "references": [
+        "GUID:341d04dbc3e6ced4f903de04a0918a48",
         "GUID:60bfecf5cb232594891bc622f40d6bed",
         "GUID:1fc40a42fd9ba86428b9f1a1bc03d8a6",
-        "GUID:87eaf3fd1840b5c42a5f00c0a45ccaa1"
+        "GUID:87eaf3fd1840b5c42a5f00c0a45ccaa1",
+        "GUID:5a5bdc0387f898e429d96457c503426a",
+        "GUID:b0a110e2f808b4d4d82f5694f91b251a"
     ],
     "includePlatforms": [
         "Editor"
