--- a/Assets/Heart/Core/Editor/Pancake.Editor.asmdef
+++ b/Assets/Heart/Core/Editor/Pancake.Editor.asmdef
@@ -151,6 +151,11 @@
             "name": "com.unity.test-framework.performance",
             "expression": "1.0.9-preview",
             "define": "PANCAKE_TEST_PERFORMANCE"
+        },
+        {
+            "name": "com.lupidan.apple-signin-unity",
+            "expression": "1.4.0",
+            "define": "PANCAKE_APPLE_SIGNIN"
         }
     ],
     "noEngineReferences": false
