-update: login in leaderboard

--- a/Assets/Heart/Modules/SignIn/Runtime/Pancake.SignIn.asmdef
+++ b/Assets/Heart/Modules/SignIn/Runtime/Pancake.SignIn.asmdef
@@ -1,14 +1,12 @@
 {
-    "name": "Pancake.AppleSignIn",
+    "name": "Pancake.SignIn",
     "rootNamespace": "",
     "references": [
         "AppleAuth",
-        "Pancake.Scriptable"
+        "Pancake.Scriptable",
+        "Google.Play.Games"
     ],
-    "includePlatforms": [
-        "Editor",
-        "iOS"
-    ],
+    "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
