--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -15,8 +15,9 @@
     "com.unity.mobile.notifications": "2.3.1",
     "com.unity.nuget.newtonsoft-json": "3.2.1",
     "com.unity.purchasing": "4.10.0",
-    "com.unity.render-pipelines.universal": "14.0.9",
+    "com.unity.render-pipelines.universal": "14.0.10",
     "com.unity.serialization": "3.1.1",
+    "com.unity.services.cloudsave": "3.1.0",
     "com.unity.services.leaderboards": "2.0.0",
     "com.unity.sharp-zip-lib": "1.3.5-preview",
     "com.unity.textmeshpro": "3.0.7",
@@ -51,7 +52,6 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0",
-    "com.unity.services.cloudsave": "3.1.0"
+    "com.unity.modules.xr": "1.0.0"
   }
 }
