--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -52,6 +52,7 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0"
+    "com.unity.modules.xr": "1.0.0",
+    "com.tayx.graphy": "https://github.com/Tayx94/graphy.git#v3.0.5"
   }
 }
