-update: when not install graphy

--- a/Assets/Heart/Modules/DebugView/Runtime/Extensions/Graphy/Pancake.DebugView.Graphy.asmdef
+++ b/Assets/Heart/Modules/DebugView/Runtime/Extensions/Graphy/Pancake.DebugView.Graphy.asmdef
@@ -20,7 +20,7 @@
         {
             "name": "com.tayx.graphy",
             "expression": "",
-            "define": "UDS_GRAPHY_SUPPORT"
+            "define": "PANCAKE_GRAPHY"
         }
     ],
     "noEngineReferences": false
