--- a/Assets/Heart/Modules/Sound/Pancake.Sound.asmdef
+++ b/Assets/Heart/Modules/Sound/Pancake.Sound.asmdef
@@ -6,7 +6,8 @@
         "GUID:adac8d59ad7e8504f82d387cded797a7",
         "GUID:b0a110e2f808b4d4d82f5694f91b251a",
         "GUID:87eaf3fd1840b5c42a5f00c0a45ccaa1",
-        "GUID:80ecb87cae9c44d19824e70ea7229748"
+        "GUID:80ecb87cae9c44d19824e70ea7229748",
+        "GUID:efdee36e63e4ce34a91071531ec746c1"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
