--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,21 +4,19 @@
     "com.coffee.ui-particle": "https://github.com/mob-sakai/ParticleEffectForUGUI.git#4.6.2",
     "com.esotericsoftware.spine.spine-csharp": "https://github.com/EsotericSoftware/spine-runtimes.git?path=spine-csharp/src#4.1",
     "com.esotericsoftware.spine.spine-unity": "https://github.com/EsotericSoftware/spine-runtimes.git?path=spine-unity/Assets/Spine#4.1",
-    "com.esotericsoftware.spine.urp-shaders": "https://github.com/EsotericSoftware/spine-runtimes.git?path=spine-unity/Modules/com.esotericsoftware.spine.urp-shaders#4.1",
-    "com.google.external-dependency-manager": "https://github.com/google-unity/external-dependency-manager.git#1.2.177",
+    "com.google.external-dependency-manager": "https://github.com/google-unity/external-dependency-manager.git#1.2.179",
     "com.tayx.graphy": "https://github.com/pancake-llc/graphy.git#3.0.6",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.addressables": "1.21.20",
-    "com.unity.burst": "1.8.12",
+    "com.unity.burst": "1.8.13",
     "com.unity.collections": "2.1.4",
     "com.unity.ide.rider": "3.0.28",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.mobile.notifications": "2.3.2",
     "com.unity.nuget.newtonsoft-json": "3.2.1",
     "com.unity.purchasing": "4.10.0",
-    "com.unity.render-pipelines.universal": "14.0.10",
     "com.unity.serialization": "3.1.1",
-    "com.unity.services.cloudsave": "3.1.0",
+    "com.unity.services.cloudsave": "3.1.1",
     "com.unity.services.leaderboards": "2.0.0",
     "com.unity.sharp-zip-lib": "1.3.6-preview",
     "com.unity.textmeshpro": "3.0.8",
@@ -50,9 +48,6 @@
     "com.unity.modules.unitywebrequesttexture": "1.0.0",
     "com.unity.modules.unitywebrequestwww": "1.0.0",
     "com.unity.modules.vehicles": "1.0.0",
-    "com.unity.modules.video": "1.0.0",
-    "com.unity.modules.vr": "1.0.0",
-    "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0"
+    "com.unity.modules.video": "1.0.0"
   }
 }
