--- a/Assets/Heart/Modules/Random/Runtime/Pancake.Rng.asmdef
+++ b/Assets/Heart/Modules/Random/Runtime/Pancake.Rng.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "Pancake.Rng",
     "rootNamespace": "",
-    "references": [],
+    "references": [
+        "GUID:341d04dbc3e6ced4f903de04a0918a48"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
