--- a/Assets/Heart/package.json
+++ b/Assets/Heart/package.json
@@ -2,7 +2,7 @@
   "name": "com.pancake.heart",
   "displayName": "Heart",
   "description": "The heart of the world tree, use for make game in Unity3D",
-  "version": "2.6.0",
+  "version": "2.7.0",
   "unity": "2022.2",
   "category": "core",
   "author": {
@@ -15,7 +15,7 @@
     "unity"
   ],
   "dependencies": {
-    "com.unity.sharp-zip-lib": "1.3.6-preview",
+    "com.unity.sharp-zip-lib": "1.3.7",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.burst": "1.8.13",
     "com.unity.collections": "2.1.4",
