--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -14,11 +14,11 @@
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.mobile.notifications": "2.3.2",
     "com.unity.nuget.newtonsoft-json": "3.2.1",
-    "com.unity.purchasing": "4.10.0",
+    "com.unity.purchasing": "4.11.0",
     "com.unity.serialization": "3.1.1",
     "com.unity.services.cloudsave": "3.1.1",
     "com.unity.services.leaderboards": "2.0.0",
-    "com.unity.sharp-zip-lib": "1.3.6-preview",
+    "com.unity.sharp-zip-lib": "1.3.7",
     "com.unity.textmeshpro": "3.0.8",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
