--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -7,9 +7,9 @@
     "com.google.external-dependency-manager": "https://github.com/google-unity/external-dependency-manager.git#1.2.179",
     "com.tayx.graphy": "https://github.com/pancake-llc/graphy.git#3.0.6",
     "com.unity.2d.sprite": "1.0.0",
-    "com.unity.addressables": "1.21.20",
+    "com.unity.addressables": "2.0.8",
     "com.unity.burst": "1.8.13",
-    "com.unity.collections": "2.1.4",
+    "com.unity.collections": "2.4.0-pre.2",
     "com.unity.ide.rider": "3.0.28",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.mobile.notifications": "2.3.2",
@@ -19,8 +19,8 @@
     "com.unity.services.cloudsave": "3.1.1",
     "com.unity.services.leaderboards": "2.0.0",
     "com.unity.sharp-zip-lib": "1.3.7",
-    "com.unity.textmeshpro": "3.0.8",
-    "com.unity.ugui": "1.0.0",
+    "com.unity.ugui": "2.0.0",
+    "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
