--- a/Assets/Heart/Modules/LevelSystem/Runtime/Pancake.LevelSystem.asmdef
+++ b/Assets/Heart/Modules/LevelSystem/Runtime/Pancake.LevelSystem.asmdef
@@ -23,6 +23,11 @@
             "name": "com.unity.addressables",
             "expression": "",
             "define": "PANCAKE_ADDRESSABLE"
+        },
+        {
+            "name": "com.cysharp.unitask",
+            "expression": "2.0.0",
+            "define": "PANCAKE_UNITASK"
         }
     ],
     "noEngineReferences": false
