--- a/Assets/Heart/Core/Editor/Pancake.Editor.asmdef
+++ b/Assets/Heart/Core/Editor/Pancake.Editor.asmdef
@@ -27,7 +27,8 @@
         "GUID:2bb2982fd552689428d4c3ae8bb26fb7",
         "GUID:d8912e81233de99449df74c45fe416da",
         "GUID:07b5f841645356448b819bba7d440ce5",
-        "GUID:2015823526a5343468cb74bd42e6f652"
+        "GUID:2015823526a5343468cb74bd42e6f652",
+        "GUID:5fd453cd0d182422093c4a764fd5eadb"
     ],
     "includePlatforms": [
         "Editor"
