--- a/Assets/Heart/Modules/UGUI/Editor/Pancake.UGUI.Editor.asmdef
+++ b/Assets/Heart/Modules/UGUI/Editor/Pancake.UGUI.Editor.asmdef
@@ -7,7 +7,8 @@
         "GUID:b0a110e2f808b4d4d82f5694f91b251a",
         "GUID:5a5bdc0387f898e429d96457c503426a",
         "GUID:f7dabdcbede30aa4d84803a163c2fa1b",
-        "GUID:d8912e81233de99449df74c45fe416da"
+        "GUID:d8912e81233de99449df74c45fe416da",
+        "GUID:2bb2982fd552689428d4c3ae8bb26fb7"
     ],
     "includePlatforms": [
         "Editor"
