--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -7,6 +7,7 @@
     "com.esotericsoftware.spine.spine-csharp": "https://github.com/EsotericSoftware/spine-runtimes.git?path=spine-csharp/src#4.1",
     "com.esotericsoftware.spine.spine-unity": "https://github.com/EsotericSoftware/spine-runtimes.git?path=spine-unity/Assets/Spine#4.1",
     "com.google.external-dependency-manager": "https://github.com/google-unity/external-dependency-manager.git#1.2.179",
+    "jp.hadashikick.vcontainer": "https://github.com/hadashiA/VContainer.git?path=VContainer/Assets/VContainer#1.15.3",
     "com.tayx.graphy": "https://github.com/pancake-llc/graphy.git#3.0.6",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.addressables": "2.0.8",
