--- a/Assets/Heart/Modules/Localization/Editor/Pancake.Localization.Editor.asmdef
+++ b/Assets/Heart/Modules/Localization/Editor/Pancake.Localization.Editor.asmdef
@@ -5,7 +5,11 @@
         "GUID:c7e7793e0b5d326429f90e6fd716775e",
         "GUID:adac8d59ad7e8504f82d387cded797a7",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
-        "GUID:d8912e81233de99449df74c45fe416da"
+        "GUID:d8912e81233de99449df74c45fe416da",
+        "GUID:a25b152d563454f8fb399739abbe5fc1",
+        "GUID:f2e4e751cc80e493bb01487f3fdb9536",
+        "GUID:eff4759ec02784e83a3522cd45057e0b",
+        "GUID:2bb2982fd552689428d4c3ae8bb26fb7"
     ],
     "includePlatforms": [
         "Editor"
