--- a/Assets/Heart/Modules/Finder/Pancake.Finder.asmdef
+++ b/Assets/Heart/Modules/Finder/Pancake.Finder.asmdef
@@ -1,7 +1,11 @@
 {
     "name": "Pancake.Finder",
     "rootNamespace": "",
-    "references": ["GUID:d8912e81233de99449df74c45fe416da","GUID:2bb2982fd552689428d4c3ae8bb26fb7"],
+    "references": [
+        "GUID:d8912e81233de99449df74c45fe416da",
+        "GUID:2bb2982fd552689428d4c3ae8bb26fb7",
+        "GUID:69448af7b92c7f342b298e06a37122aa"
+    ],
     "includePlatforms": [
         "Editor"
     ],
@@ -11,6 +15,12 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [],
+    "versionDefines": [
+        {
+            "name": "com.unity.addressables",
+            "expression": "1.0.0",
+            "define": "PANCAKE_ADDRESSABLE"
+        }
+    ],
     "noEngineReferences": false
 }
