--- a/Assets/Heart/Modules/UGUI/Pancake.UGUI.asmdef
+++ b/Assets/Heart/Modules/UGUI/Pancake.UGUI.asmdef
@@ -8,10 +8,11 @@
         "GUID:b0a110e2f808b4d4d82f5694f91b251a",
         "GUID:f4bbbe38ed06eef458a5b3516216a659",
         "GUID:f7dabdcbede30aa4d84803a163c2fa1b",
-        "GUID:80ecb87cae9c44d19824e70ea7229748",
         "GUID:776cc61a58104dc3aa7d006d09e3c517",
         "GUID:2bb2982fd552689428d4c3ae8bb26fb7",
-        "GUID:f51ebe6a0ceec4240a699833d6309b23"
+        "GUID:f51ebe6a0ceec4240a699833d6309b23",
+        "GUID:3b570a5146f9d4f0fa107ed4559471a3",
+        "GUID:3aa1866a824b5472da50fe142777d95f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
@@ -25,6 +26,16 @@
             "name": "com.cysharp.unitask",
             "expression": "2.0.0",
             "define": "PANCAKE_UNITASK"
+        },
+        {
+            "name": "com.annulusgames.alchemy",
+            "expression": "1.0.0",
+            "define": "PANCAKE_ALCHEMY"
+        },
+        {
+            "name": "com.annulusgames.lit-motion",
+            "expression": "1.0.0",
+            "define": "PANCAKE_LITMOTION"
         }
     ],
     "noEngineReferences": false
