--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -7,12 +7,16 @@
     "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask#2.5.4",
     "com.esotericsoftware.spine.spine-csharp": "https://github.com/EsotericSoftware/spine-runtimes.git?path=spine-csharp/src#4.1",
     "com.esotericsoftware.spine.spine-unity": "https://github.com/EsotericSoftware/spine-runtimes.git?path=spine-unity/Assets/Spine#4.1",
+    "com.google.android.appbundle": "https://github.com/google-unity/android-app-bundle.git#1.8.0",
     "com.google.external-dependency-manager": "https://github.com/google-unity/external-dependency-manager.git#1.2.179",
+    "com.google.play.common": "https://github.com/google-unity/google-play-common.git#1.8.1",
+    "com.google.play.core": "https://github.com/google-unity/google-play-core.git#1.8.1",
+    "com.google.play.review": "https://github.com/google-unity/in-app-review.git#1.8.1",
     "com.tayx.graphy": "https://github.com/pancake-llc/graphy.git#3.0.6",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.addressables": "2.0.8",
     "com.unity.burst": "1.8.14",
-    "com.unity.collections": "2.4.0",
+    "com.unity.collections": "2.4.1",
     "com.unity.ide.rider": "3.0.28",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.mobile.notifications": "2.3.2",
@@ -51,10 +55,6 @@
     "com.unity.modules.unitywebrequesttexture": "1.0.0",
     "com.unity.modules.unitywebrequestwww": "1.0.0",
     "com.unity.modules.vehicles": "1.0.0",
-    "com.unity.modules.video": "1.0.0",
-    "com.google.play.review": "https://github.com/google-unity/in-app-review.git#1.8.1",
-    "com.google.play.core": "https://github.com/google-unity/google-play-core.git#1.8.1",
-    "com.google.play.common": "https://github.com/google-unity/google-play-common.git#1.8.1",
-    "com.google.android.appbundle": "https://github.com/google-unity/android-app-bundle.git#1.8.0"
+    "com.unity.modules.video": "1.0.0"
   }
 }
