--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.annulusgames.alchemy": "https://github.com/pancake-llc/Alchemy.git?path=/Alchemy/Assets/Alchemy",
+    "com.annulusgames.component-cache-generator": "https://github.com/AnnulusGames/ComponentCacheGenerator.git?path=src/ComponentCacheGenerator/Assets/ComponentCacheGenerator",
     "com.annulusgames.lit-motion": "https://github.com/AnnulusGames/LitMotion.git?path=src/LitMotion/Assets/LitMotion",
     "com.coffee.ui-effect": "https://github.com/mob-sakai/UIEffect.git#4.0.0-preview.10",
     "com.coffee.ui-particle": "https://github.com/mob-sakai/ParticleEffectForUGUI.git#4.6.3",
@@ -13,7 +14,6 @@
     "com.google.play.core": "https://github.com/google-unity/google-play-core.git#1.8.1",
     "com.google.play.review": "https://github.com/google-unity/in-app-review.git#1.8.1",
     "com.tayx.graphy": "https://github.com/pancake-llc/graphy.git#3.0.6",
-    "jp.hadashikick.vcontainer": "https://github.com/hadashiA/VContainer.git?path=VContainer/Assets/VContainer#1.15.4",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.addressables": "2.0.8",
     "com.unity.burst": "1.8.14",
@@ -27,6 +27,7 @@
     "com.unity.services.cloudsave": "3.1.1",
     "com.unity.services.leaderboards": "2.0.0",
     "com.unity.ugui": "2.0.0",
+    "jp.hadashikick.vcontainer": "https://github.com/hadashiA/VContainer.git?path=VContainer/Assets/VContainer#1.15.4",
     "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
