--- a/Assets/Heart/Core/Runtime/Pancake.asmdef
+++ b/Assets/Heart/Core/Runtime/Pancake.asmdef
@@ -2,6 +2,7 @@
     "name": "Pancake",
     "rootNamespace": "",
     "references": [
+        "GUID:88be65f96b86746888c927a5c8ff3534",
         "GUID:2765e68924a08a94ea0ea66b31c0168f",
         "GUID:e0cd26848372d4e5c891c569017e11f1",
         "GUID:2bb2982fd552689428d4c3ae8bb26fb7"
