--- a/Assets/Heart/Modules/Component/Pancake.Component.asmdef
+++ b/Assets/Heart/Modules/Component/Pancake.Component.asmdef
@@ -8,7 +8,9 @@
         "GUID:c7e7793e0b5d326429f90e6fd716775e",
         "GUID:2bb2982fd552689428d4c3ae8bb26fb7",
         "GUID:3b570a5146f9d4f0fa107ed4559471a3",
-        "GUID:3aa1866a824b5472da50fe142777d95f"
+        "GUID:3aa1866a824b5472da50fe142777d95f",
+        "GUID:77aea589fe3f34fa883d9f7e26eee12e",
+        "GUID:f51ebe6a0ceec4240a699833d6309b23"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
