--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -5,6 +5,7 @@
     "com.annulusgames.lit-motion": "https://github.com/AnnulusGames/LitMotion.git?path=src/LitMotion/Assets/LitMotion#v1.9.0",
     "com.coffee.ui-effect": "https://github.com/mob-sakai/UIEffect.git#4.0.0-preview.10",
     "com.coffee.ui-particle": "https://github.com/mob-sakai/ParticleEffectForUGUI.git#4.6.4",
+    "com.cysharp.r3": "https://github.com/Cysharp/R3.git?path=src/R3.Unity/Assets/R3.Unity#1.1.11",
     "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask#2.5.4",
     "com.esotericsoftware.spine.spine-csharp": "https://github.com/EsotericSoftware/spine-runtimes.git?path=spine-csharp/src#4.1",
     "com.esotericsoftware.spine.spine-unity": "https://github.com/EsotericSoftware/spine-runtimes.git?path=spine-unity/Assets/Spine#4.1",
@@ -13,6 +14,12 @@
     "com.google.play.common": "https://github.com/google-unity/google-play-common.git#1.8.1",
     "com.google.play.core": "https://github.com/google-unity/google-play-core.git#1.8.1",
     "com.google.play.review": "https://github.com/google-unity/in-app-review.git#1.8.1",
+    "com.pancake.bcl.asyncinterfaces": "https://github.com/pancake-llc/microsoft-bcl-async-interfaces.git#6.0.0",
+    "com.pancake.bcl.timeprovider": "https://github.com/pancake-llc/microsoft-bcl-time-provider.git#8.0.0",
+    "com.pancake.component.annotations": "https://github.com/pancake-llc/system-componentmodel-annotations.git#5.0.0",
+    "com.pancake.r3": "https://github.com/pancake-llc/R3.git#1.1.11",
+    "com.pancake.threading.channels": "https://github.com/pancake-llc/system-threading-channels.git#8.0.0",
+    "com.pancake.unsafe": "https://github.com/pancake-llc/system-unsafe.git#6.0.0",
     "com.tayx.graphy": "https://github.com/pancake-llc/graphy.git#3.0.6",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.addressables": "2.0.8",
