--- a/Assets/Heart/Modules/Component/Pancake.Component.asmdef
+++ b/Assets/Heart/Modules/Component/Pancake.Component.asmdef
@@ -10,7 +10,8 @@
         "GUID:3b570a5146f9d4f0fa107ed4559471a3",
         "GUID:3aa1866a824b5472da50fe142777d95f",
         "GUID:77aea589fe3f34fa883d9f7e26eee12e",
-        "GUID:f51ebe6a0ceec4240a699833d6309b23"
+        "GUID:f51ebe6a0ceec4240a699833d6309b23",
+        "GUID:2953aa809c908034bb137ea43ba7735d"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
