--- a/Assets/Heart/Modules/Sound/Pancake.Sound.asmdef
+++ b/Assets/Heart/Modules/Sound/Pancake.Sound.asmdef
@@ -6,7 +6,8 @@
         "GUID:2bb2982fd552689428d4c3ae8bb26fb7",
         "GUID:3b570a5146f9d4f0fa107ed4559471a3",
         "GUID:3aa1866a824b5472da50fe142777d95f",
-        "GUID:b0214a6008ed146ff8f122a6a9c2f6cc"
+        "GUID:b0214a6008ed146ff8f122a6a9c2f6cc",
+        "GUID:2953aa809c908034bb137ea43ba7735d"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
