-update: - target API 34 - block app open when ad showing - update ad setting - update version firebase install - admob now dependency androidx.lifecycle:lifecycle-process 2.7.0

--- a/Assets/Heart/Modules/Sound/Editor/Pancake.Sound.Editor.asmdef
+++ b/Assets/Heart/Modules/Sound/Editor/Pancake.Sound.Editor.asmdef
@@ -8,7 +8,9 @@
         "GUID:d8912e81233de99449df74c45fe416da",
         "GUID:3b570a5146f9d4f0fa107ed4559471a3"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
