--- a/Assets/Heart/Common/Editor/Pancake.CommonEditor.asmdef
+++ b/Assets/Heart/Common/Editor/Pancake.CommonEditor.asmdef
@@ -1,7 +1,9 @@
 {
   "name": "Pancake.CommonEditor",
   "rootNamespace": "",
-  "references": ["GUID:2bb2982fd552689428d4c3ae8bb26fb7"],
+  "references": [
+    "GUID:2bb2982fd552689428d4c3ae8bb26fb7"
+  ],
   "includePlatforms": [
     "Editor"
   ],
