--- a/Assets/Heart/Modules/DebugView/Pancake.DebugView.asmdef
+++ b/Assets/Heart/Modules/DebugView/Pancake.DebugView.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "GUID:1d516b886d9db401ea62daad275f3915",
-        "GUID:77221876cc6b8244180b96e320b1bcd4"
+        "GUID:adac8d59ad7e8504f82d387cded797a7",
+        "GUID:88be65f96b86746888c927a5c8ff3534"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
