--- a/Assets/Heart/Core/Runtime/Pancake.asmdef
+++ b/Assets/Heart/Core/Runtime/Pancake.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "GUID:88be65f96b86746888c927a5c8ff3534",
-        "GUID:2bb2982fd552689428d4c3ae8bb26fb7"
+        "GUID:2bb2982fd552689428d4c3ae8bb26fb7",
+        "GUID:d263cfcb6fe4c8e458b5530d29ee4d1f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
