--- a/Assets/_Root/Scripts/Game/Pancake.Game.asmdef
+++ b/Assets/_Root/Scripts/Game/Pancake.Game.asmdef
@@ -9,7 +9,8 @@
         "GUID:d263cfcb6fe4c8e458b5530d29ee4d1f",
         "GUID:f51ebe6a0ceec4240a699833d6309b23",
         "GUID:e873106bbfb1c2b46b5d73189bb036b5",
-        "GUID:ad0f668b6d292f7448b28fa8f9f20f2f"
+        "GUID:ad0f668b6d292f7448b28fa8f9f20f2f",
+        "GUID:71a2e5fd62742b447a45a06bf18f9a7d"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
