--- a/Assets/_Root/Scripts/Game/Pancake.Game.asmdef
+++ b/Assets/_Root/Scripts/Game/Pancake.Game.asmdef
@@ -12,7 +12,9 @@
         "GUID:e873106bbfb1c2b46b5d73189bb036b5",
         "GUID:ad0f668b6d292f7448b28fa8f9f20f2f",
         "GUID:71a2e5fd62742b447a45a06bf18f9a7d",
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:f4bbbe38ed06eef458a5b3516216a659",
+        "GUID:2953aa809c908034bb137ea43ba7735d"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
