-update: restore credit popup

--- a/Assets/_Root/Scripts/Game/Pancake.Game.asmdef
+++ b/Assets/_Root/Scripts/Game/Pancake.Game.asmdef
@@ -14,7 +14,8 @@
         "GUID:71a2e5fd62742b447a45a06bf18f9a7d",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:f4bbbe38ed06eef458a5b3516216a659",
-        "GUID:2953aa809c908034bb137ea43ba7735d"
+        "GUID:2953aa809c908034bb137ea43ba7735d",
+        "GUID:3b570a5146f9d4f0fa107ed4559471a3"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
