--- a/Assets/Heart/Modules/Input/Runtime/Pancake.Input.asmdef
+++ b/Assets/Heart/Modules/Input/Runtime/Pancake.Input.asmdef
@@ -4,7 +4,9 @@
     "references": [
         "GUID:88be65f96b86746888c927a5c8ff3534",
         "GUID:adac8d59ad7e8504f82d387cded797a7",
-        "GUID:2bb2982fd552689428d4c3ae8bb26fb7"
+        "GUID:2bb2982fd552689428d4c3ae8bb26fb7",
+        "GUID:d263cfcb6fe4c8e458b5530d29ee4d1f",
+        "GUID:76ccd20425a997e4fa7d12750eb80eb1"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
