-add: daily reward

--- a/Assets/_Root/Scripts/Game/Pancake.Game.asmdef
+++ b/Assets/_Root/Scripts/Game/Pancake.Game.asmdef
@@ -5,6 +5,7 @@
         "GUID:88be65f96b86746888c927a5c8ff3534",
         "GUID:d263cfcb6fe4c8e458b5530d29ee4d1f",
         "GUID:3b570a5146f9d4f0fa107ed4559471a3",
+        "GUID:3aa1866a824b5472da50fe142777d95f",
         "GUID:f51ebe6a0ceec4240a699833d6309b23",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:adac8d59ad7e8504f82d387cded797a7",
