-update: setup in-game notification

--- a/Assets/_Root/Scripts/Game/Pancake.Game.asmdef
+++ b/Assets/_Root/Scripts/Game/Pancake.Game.asmdef
@@ -20,7 +20,9 @@
         "GUID:38036840b8620d443a0acf3e48f20d6f",
         "GUID:8bafa5e8674c15c45ae2a849f9838eca",
         "GUID:f7dabdcbede30aa4d84803a163c2fa1b",
-        "GUID:1fc40a42fd9ba86428b9f1a1bc03d8a6"
+        "GUID:1fc40a42fd9ba86428b9f1a1bc03d8a6",
+        "GUID:77aea589fe3f34fa883d9f7e26eee12e",
+        "GUID:2615d51e385ff24419861f23345b3002"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
