-add: game service setting

--- a/Assets/Heart/Modules/SignIn/Editor/Pancake.SignIn.Editor.asmdef
+++ b/Assets/Heart/Modules/SignIn/Editor/Pancake.SignIn.Editor.asmdef
@@ -2,6 +2,7 @@
     "name": "Pancake.SignIn.Editor",
     "rootNamespace": "",
     "references": [
+        "GUID:837b3842fcf669f42838802a1f10305e",
         "GUID:e2146bdc04d424169b039613a1b62bdf",
         "GUID:09ef5922e2d77498aa246abd9073d05f"
     ],
