--- a/Assets/Heart/Modules/SignIn/Runtime/Pancake.SignIn.asmdef
+++ b/Assets/Heart/Modules/SignIn/Runtime/Pancake.SignIn.asmdef
@@ -2,6 +2,8 @@
     "name": "Pancake.SignIn",
     "rootNamespace": "",
     "references": [
+        "Alchemy",
+        "Pancake",
         "AppleAuth",
         "Google.Play.Games"
     ],
