--- a/Assets/Heart/Modules/Random/Runtime/Pancake.Rng.asmdef
+++ b/Assets/Heart/Modules/Random/Runtime/Pancake.Rng.asmdef
@@ -1,16 +1,17 @@
 {
-  "name": "Pancake.Rng",
-  "rootNamespace": "",
-  "references": [
-    "GUID:88be65f96b86746888c927a5c8ff3534"
-  ],
-  "includePlatforms": [],
-  "excludePlatforms": [],
-  "allowUnsafeCode": false,
-  "overrideReferences": false,
-  "precompiledReferences": [],
-  "autoReferenced": true,
-  "defineConstraints": [],
-  "versionDefines": [],
-  "noEngineReferences": false
+    "name": "Pancake.Rng",
+    "rootNamespace": "",
+    "references": [
+        "GUID:88be65f96b86746888c927a5c8ff3534",
+        "GUID:2bb2982fd552689428d4c3ae8bb26fb7"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
