--- a/Assets/Heart/package.json
+++ b/Assets/Heart/package.json
@@ -3,7 +3,7 @@
   "displayName": "Heart",
   "description": "The heart of the world tree, use for make game in Unity3D",
   "version": "3.0.0",
-  "unity": "2022.2",
+  "unity": "6000.0",
   "category": "core",
   "author": {
     "name": "yenmoc",
@@ -15,9 +15,10 @@
     "unity"
   ],
   "dependencies": {
+    "com.unity.ugui": "2.0.0",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.burst": "1.8.17",
-    "com.unity.collections": "2.4.2",
+    "com.unity.collections": "2.4.3",
     "com.unity.serialization": "3.1.1",
     "com.unity.nuget.newtonsoft-json": "3.2.1"
   },
