--- a/Assets/_Root/Scripts/Game/DI/Interfaces/Pancake.Game.Interfaces.asmdef
+++ b/Assets/_Root/Scripts/Game/DI/Interfaces/Pancake.Game.Interfaces.asmdef
@@ -1,3 +1,16 @@
 {
-	"name": "Pancake.Game.Interfaces"
+    "name": "Pancake.Game.Interfaces",
+    "rootNamespace": "",
+    "references": [
+        "GUID:adac8d59ad7e8504f82d387cded797a7"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
