--- a/Assets/_Root/Scripts/Game/Pancake.Game.asmdef
+++ b/Assets/_Root/Scripts/Game/Pancake.Game.asmdef
@@ -28,7 +28,8 @@
         "GUID:00c479e63b1c74419820a39073267645",
         "GUID:1ed07ff861e5f468287b0baef844706d",
         "GUID:837b3842fcf669f42838802a1f10305e",
-        "GUID:be0d2672886cc45b2bcea5a5053a5347"
+        "GUID:be0d2672886cc45b2bcea5a5053a5347",
+        "GUID:75469ad4d38634e559750d17036d5f7c"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
