--- a/Assets/_Root/Scripts/Game/DI/Initializer/Pancake.Game.Initializer.asmdef
+++ b/Assets/_Root/Scripts/Game/DI/Initializer/Pancake.Game.Initializer.asmdef
@@ -6,7 +6,8 @@
         "GUID:76ccd20425a997e4fa7d12750eb80eb1",
         "GUID:b6617254337639047b6bef8c49bfe848",
         "GUID:e873106bbfb1c2b46b5d73189bb036b5",
-        "GUID:ad0f668b6d292f7448b28fa8f9f20f2f"
+        "GUID:ad0f668b6d292f7448b28fa8f9f20f2f",
+        "GUID:adac8d59ad7e8504f82d387cded797a7"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
