--- a/Assets/Heart/Common/Editor/Pancake.Common.Editor.asmdef
+++ b/Assets/Heart/Common/Editor/Pancake.Common.Editor.asmdef
@@ -1,10 +1,8 @@
 {
-    "name": "BakingSheet.Editor",
+    "name": "Pancake.Common.Editor",
     "rootNamespace": "",
     "references": [
-        "BakingSheet",
-        "Unity.Addressables.Editor",
-        "Pancake.Common.Editor"
+        "GUID:2bb2982fd552689428d4c3ae8bb26fb7"
     ],
     "includePlatforms": [
         "Editor"
@@ -15,12 +13,6 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [
-        {
-            "name": "com.unity.addressables",
-            "expression": "0.0.1",
-            "define": "BAKINGSHEET_ADDRESSABLES"
-        }
-    ],
+    "versionDefines": [],
     "noEngineReferences": false
 }
