--- a/Assets/Heart/package.json
+++ b/Assets/Heart/package.json
@@ -20,7 +20,9 @@
     "com.unity.burst": "1.8.17",
     "com.unity.collections": "2.4.3",
     "com.unity.serialization": "3.1.2",
-    "com.unity.nuget.newtonsoft-json": "3.2.1"
+    "com.unity.nuget.newtonsoft-json": "3.2.1",
+    "com.unity.addressables": "2.2.2",
+    "com.unity.mobile.notifications": "2.3.2"
   },
   "repository": {
     "type": "git",
