--- a/Assets/Heart/Modules/DebugView/Pancake.DebugView.asmdef
+++ b/Assets/Heart/Modules/DebugView/Pancake.DebugView.asmdef
@@ -13,6 +13,12 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [],
+    "versionDefines": [
+        {
+            "name": "com.annulusgames.debug-ui",
+            "expression": "1.0.2",
+            "define": "PANCAKE_DEBUG_UI"
+        }
+    ],
     "noEngineReferences": false
 }
