--- a/Assets/Heart/package.json
+++ b/Assets/Heart/package.json
@@ -22,7 +22,8 @@
     "com.unity.serialization": "3.1.2",
     "com.unity.nuget.newtonsoft-json": "3.2.1",
     "com.unity.addressables": "2.2.2",
-    "com.unity.mobile.notifications": "2.3.2"
+    "com.unity.mobile.notifications": "2.3.2",
+    "com.unity.services.core": "1.13.0"
   },
   "repository": {
     "type": "git",
