--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -48,7 +48,6 @@
     "com.unity.modules.unitywebrequesttexture": "1.0.0",
     "com.unity.modules.unitywebrequestwww": "1.0.0",
     "com.unity.modules.vehicles": "1.0.0",
-    "com.unity.modules.video": "1.0.0",
-    "com.adjust.sdk": "https://github.com/pancake-llc/adjust.git?path=Assets/Adjust#5.0.3"
+    "com.unity.modules.video": "1.0.0"
   }
 }
