--- a/Assets/_Root/Scripts/Game/DI/Initializer/Pancake.Game.Initializer.asmdef
+++ b/Assets/_Root/Scripts/Game/DI/Initializer/Pancake.Game.Initializer.asmdef
@@ -7,7 +7,8 @@
         "GUID:b6617254337639047b6bef8c49bfe848",
         "GUID:e873106bbfb1c2b46b5d73189bb036b5",
         "GUID:ad0f668b6d292f7448b28fa8f9f20f2f",
-        "GUID:adac8d59ad7e8504f82d387cded797a7"
+        "GUID:adac8d59ad7e8504f82d387cded797a7",
+        "GUID:9a7d3b2cdd7f355498aa73c26f72686f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
