--- a/Assets/_Root/Scripts/Game/DI/Services/Pancake.Game.Services.asmdef
+++ b/Assets/_Root/Scripts/Game/DI/Services/Pancake.Game.Services.asmdef
@@ -7,7 +7,8 @@
         "GUID:c7e7793e0b5d326429f90e6fd716775e",
         "GUID:e873106bbfb1c2b46b5d73189bb036b5",
         "GUID:d263cfcb6fe4c8e458b5530d29ee4d1f",
-        "GUID:76ccd20425a997e4fa7d12750eb80eb1"
+        "GUID:76ccd20425a997e4fa7d12750eb80eb1",
+        "GUID:9a7d3b2cdd7f355498aa73c26f72686f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
