--- a/Assets/_Root/Scripts/Game/Pancake.Game.asmdef
+++ b/Assets/_Root/Scripts/Game/Pancake.Game.asmdef
@@ -29,7 +29,9 @@
         "GUID:1ed07ff861e5f468287b0baef844706d",
         "GUID:837b3842fcf669f42838802a1f10305e",
         "GUID:be0d2672886cc45b2bcea5a5053a5347",
-        "GUID:75469ad4d38634e559750d17036d5f7c"
+        "GUID:75469ad4d38634e559750d17036d5f7c",
+        "GUID:9a7d3b2cdd7f355498aa73c26f72686f",
+        "GUID:bba86bf5741f15f42bba605abe4ccf72"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
