--- a/Assets/Heart/Modules/AI/Runtime/Pancake.AI.asmdef
+++ b/Assets/Heart/Modules/AI/Runtime/Pancake.AI.asmdef
@@ -5,7 +5,8 @@
         "GUID:8c4dd21966739024fbd72155091d199e",
         "GUID:adac8d59ad7e8504f82d387cded797a7",
         "GUID:2bb2982fd552689428d4c3ae8bb26fb7",
-        "GUID:1955df3fec9b6433d9d8aa0ad47c1767"
+        "GUID:1955df3fec9b6433d9d8aa0ad47c1767",
+        "GUID:6fba570e0f7342c49b5d15e1ef8f6408"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
