--- a/Assets/Heart/Modules/Advertising/Editor/Pancake.Monetization.Editor.asmdef
+++ b/Assets/Heart/Modules/Advertising/Editor/Pancake.Monetization.Editor.asmdef
@@ -1,23 +1,30 @@
 {
-  "name": "Pancake.Monetization.Editor",
-  "rootNamespace": "",
-  "references": [
-    "GUID:adac8d59ad7e8504f82d387cded797a7",
-    "GUID:38036840b8620d443a0acf3e48f20d6f",
-    "GUID:2bb2982fd552689428d4c3ae8bb26fb7",
-    "GUID:d8912e81233de99449df74c45fe416da"
-  ],
-  "includePlatforms": [
-    "Editor"
-  ],
-  "excludePlatforms": [],
-  "allowUnsafeCode": false,
-  "overrideReferences": true,
-  "precompiledReferences": [
-    "Newtonsoft.Json.dll"
-  ],
-  "autoReferenced": true,
-  "defineConstraints": [],
-  "versionDefines": [],
-  "noEngineReferences": false
+    "name": "Pancake.Monetization.Editor",
+    "rootNamespace": "",
+    "references": [
+        "GUID:adac8d59ad7e8504f82d387cded797a7",
+        "GUID:38036840b8620d443a0acf3e48f20d6f",
+        "GUID:2bb2982fd552689428d4c3ae8bb26fb7",
+        "GUID:d8912e81233de99449df74c45fe416da",
+        "GUID:a10a05a8449c42519fd80f2b8b580de3"
+    ],
+    "includePlatforms": [
+        "Editor"
+    ],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": true,
+    "precompiledReferences": [
+        "Newtonsoft.Json.dll"
+    ],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [
+        {
+            "name": "com.applovin.mediation.ads",
+            "expression": "8.0.0",
+            "define": "PANCAKE_APPLOVIN"
+        }
+    ],
+    "noEngineReferences": false
 }
