--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -50,5 +50,6 @@
     "com.unity.modules.unitywebrequestwww": "1.0.0",
     "com.unity.modules.vehicles": "1.0.0",
     "com.unity.modules.video": "1.0.0"
-  }
+  },
+  "scopedRegistries": []
 }
