--- a/Assets/_Root/Scripts/Game/Pancake.Game.asmdef
+++ b/Assets/_Root/Scripts/Game/Pancake.Game.asmdef
@@ -31,7 +31,9 @@
         "GUID:be0d2672886cc45b2bcea5a5053a5347",
         "GUID:75469ad4d38634e559750d17036d5f7c",
         "GUID:9a7d3b2cdd7f355498aa73c26f72686f",
-        "GUID:bba86bf5741f15f42bba605abe4ccf72"
+        "GUID:bba86bf5741f15f42bba605abe4ccf72",
+        "GUID:f27b1c70cda995b418241c27f1f5fe7c",
+        "GUID:1d516b886d9db401ea62daad275f3915"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
