--- a/Assets/Heart/Modules/Input/Runtime/Pancake.Input.asmdef
+++ b/Assets/Heart/Modules/Input/Runtime/Pancake.Input.asmdef
@@ -5,7 +5,8 @@
         "GUID:adac8d59ad7e8504f82d387cded797a7",
         "GUID:2bb2982fd552689428d4c3ae8bb26fb7",
         "GUID:d263cfcb6fe4c8e458b5530d29ee4d1f",
-        "GUID:76ccd20425a997e4fa7d12750eb80eb1"
+        "GUID:76ccd20425a997e4fa7d12750eb80eb1",
+        "GUID:75469ad4d38634e559750d17036d5f7c"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
@@ -14,6 +15,12 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [],
+    "versionDefines": [
+        {
+            "name": "com.unity.inputsystem",
+            "expression": "1.0.0",
+            "define": "PANCAKE_INPUTSYSTEM"
+        }
+    ],
     "noEngineReferences": false
 }
