--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -46,7 +46,8 @@
     "com.unity.modules.unitywebrequesttexture": "1.0.0",
     "com.unity.modules.unitywebrequestwww": "1.0.0",
     "com.unity.modules.vehicles": "1.0.0",
-    "com.unity.modules.video": "1.0.0"
+    "com.unity.modules.video": "1.0.0",
+    "com.adjust.sdk": "https://github.com/adjust/unity_sdk.git?path=Assets/Adjust#v5.0.3"
   },
   "scopedRegistries": []
 }
