-wip: add MMProgress bar

--- a/ProjectSettings/Packages/com.unity.services.core/Settings.json
+++ b/ProjectSettings/Packages/com.unity.services.core/Settings.json
@@ -1,1 +1,4 @@
-{"EnvironmentName":"development"}
+{
+  "EnvironmentName": "development",
+  "EnvironmentId": "9ed76f2a-2183-4528-bd14-20c92ef94b58"
+}
