--- a/Assets/Heart/Modules/Init/Editor/InitArgs.Editor.asmdef
+++ b/Assets/Heart/Modules/Init/Editor/InitArgs.Editor.asmdef
@@ -6,7 +6,9 @@
         "InitArgs.Services",
         "Pancake.Localization",
         "Pancake.Common.Editor",
-        "Unity.InternalAPIEditorBridgeDev.004"
+        "Unity.InternalAPIEditorBridgeDev.004",
+        "Unity.Addressables",
+        "Unity.ResourceManager"
     ],
     "includePlatforms": [
         "Editor"
