-update: author package

--- a/Assets/Heart/package.json
+++ b/Assets/Heart/package.json
@@ -6,9 +6,9 @@
   "unity": "6000.0",
   "category": "core",
   "author": {
-    "name": "yenmoc",
+    "name": "aprius",
     "email": "phongsoyenmoc.diep@gmail.com",
-    "url": "https://github.com/yenmoc"
+    "url": "https://github.com/aprius"
   },
   "license": "MIT",
   "keywords": [
